--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -11,9 +11,22 @@ body {
   background-position: left;
 }
 
+.button {
+  background-color: #1c87c9;
+  border: none;
+  color: white;
+  padding: 20px 34px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
 /* Mis trabajos */
 
-#Mis-trabajos .image-top {
+#trabajos .image-top {
   height: 250px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -22,7 +35,7 @@ body {
 
 /* Contacto */
 
-#Contacto form label {
+#contacto form label {
   font-weight: 700;
   color: #373a3c;
 }
