--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,19 +11,6 @@ body {
   background-position: left;
 }
 
-.button {
-  background-color: #1c87c9;
-  border: none;
-  color: white;
-  padding: 20px 34px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
 /* Mis trabajos */
 
 #trabajos .image-top {
@@ -38,6 +25,28 @@ body {
 #contacto form label {
   font-weight: 700;
   color: #373a3c;
+}
+
+.icon > p{
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: bolder;
+}
+.icon{
+  -webkit-transition: 0.5s linear;
+  transition: 0.5s linear;
+}
+.icon:hover{
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
+}
+#linkedin{
+  color:#0072b1;
+}
+#github{
+  color:#333;
+}
+#whatsapp{
+  color:#25D366;
 }
 
 @media (max-width: 768px) {
